env/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surote-py-header
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: surote-py-header
        image: surote/py-http-echo
